# modulog

./: .gitignore  README.md  _tags  bisimulation.logic  block_list.c  booleans.logic  btree.c  complex-sorts.logic  display_names.opam  dune-project  edge.csv  emptytuple.mlog  expr.mlog  ext.mlog  flake.nix  graph-glueing.logic  graph-reachability.logic  idealised_algol.opam  ifds.mlog  ifds2.mlog  imp.opam  logical.el  logical_cmd.opam  modlog.opam  modules.ml  modules.opam  modulog-bin.opam  modulog.opam  newtype.mlog  nonsense-rec.logic  notes.md  packages.logic  paths.mlog  paths2.mlog  planning.logic  pointsto.mlog  rec-unsafe.mlog  rec.mlog  regular-expressions.logic  relation_machine.opam  (+9 more)
datalog/: .merlin  dune  graphviz.ml  jbuild  name_freshener.mli  ruleset.ml  ruleset.mli
display-names/: dune  fresh.ml  fresh.mli  jbuild
idealised-algol/: block_list.ml  btree.ml  c.ml  c.mli  dune  jbuild  stack.ml  syntax.ml
lib_imp/: .merlin  block_list.ml  btree.ml  c.ml  imp.ml  imp_btree.ml  imp_relation.ml  imp_stack.ml  jbuild  relation.ml  stack.ml  syntax.ml
logical/: checker.ml  core_syntax.ml  dune  lexer.mll  location.ml  location.mli  parser.mly  result_ext.ml  solver.ml  synthesis.ml  synthesis.mli  toplevel.ml  tuple2.ml
logical_cmd/: dune  main.ml
logical_examples/: complex-sorts.logic  ode.logic  packages.logic  planning.logic  program-logic.logic  unsat.logic
modlog/: checked_syntax.ml  checker.ml  checker.mli  core_syntax.ml  datalog_grammar.mly  jbuild  lexer.mll  location.ml  parser.mly  syntax.mli  to_rules.ml  to_rules.mli
modules/: .merlin  README.md  dune  evaluator.ml  evaluator.mli  ident.ml  ident.mli  jbuild  modules_grammar.mly  path.ml  path.mli  subst.ml  subst.mli  syntax.ml  syntax.mli  typing.ml  typing.mli  typing_environment.ml  typing_environment.mli
modulog/: checked_syntax.mli  checker.ml  checker.mli  core_syntax.ml  datalog_grammar.mly  dune  jbuild  lexer.mll  location.mli  parser.messages  parser_driver.ml  std.ml  syntax.ml  to_rules.ml
modulog-bin/: driver.ml  dune  jbuild
relation_machine/: codegen.ml  codegen_csv.ml  codegen_double_buf.ml  codegen_indexed_table.ml  codegen_inttuple.ml  dune  indexes.ml  indexes.mli  interpreter.ml  interpreter.mli  jbuild  minimalpathcover.ml  minimalpathcover.mli  of_rules.ml  of_rules.mli  syntax.ml  syntax.mli  to_c.ml
src/: .merlin  cgen.ml  datalog.mllib  datalog_abstractmachine.ml  datalog_checker.ml  datalog_lexer.mll  datalog_normalisation.ml  datalog_normalisation.mli  datalog_parser.mly  datalog_ruleset.ml  datalog_ruleset.mli  datalog_ruleset_graphviz.ml  datalog_syntax.ml  driver.ml  format_util.ml  imp.mllib  imp_block_list.ml  imp_btree.ml  imp_c.ml  imp_stack.ml  imp_syntax.ml  indexes.ml  jbuild  location.ml  logolol.ml  minimalpathcover.ml  modlog.ml  modlog_checker.ml  modlog_checker.mli  modlog_lexer.mll  modlog_parser.mly  modlog_syntax.ml  modlog_to_rules.ml  modlog_to_rules.mli  modules.ml  modules.mllib  modules_evaluator.ml  modules_evaluator.mli  modules_ident.ml  modules_ident.mli  (+18 more)
